<?xml version="1.0"?>
<package>
  <name>LRF_filter</name>
  <version>0.0.0</version>
  <description>The LRF_filter package</description>

  <maintainer email="kevinskim@todo.todo">kevinskim</maintainer>

  <license>MIT?</license>

  <!-- <url type="website">http://wiki.ros.org/LRF_filter</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>