<?xml version="1.0"?>
<package>
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <maintainer email="kevink@todo.todo">kevink</maintainer>

  <license>MIT?</license>

  <!-- <url type="website">http://wiki.ros.org/navigation</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roboteq</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roboteq</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
